log
Wed 24 Apr 2024 05:29:58 AM UTC: 
 tests:  0|6
total_score: 0/70
142eba2
Wed 24 Apr 2024 01:20:00 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
7afc619
Wed 24 Apr 2024 01:21:17 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a75d19
Wed 24 Apr 2024 01:21:40 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
da1aa42
Wed 24 Apr 2024 01:21:53 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: ‘mapa’ undeclared (first use in this function)
   56 |   mapa->buckets = (Pair **)calloc(capacity,sizeof(Pair *));
      |   ^~~~
hashmap.c:56:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d6f6319
Wed 24 Apr 2024 01:22:56 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:21: error: ‘HashMapa’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |   HashMap * mapa = (HashMapa *)malloc(sizeof(HashMap));
      |                     ^~~~~~~~
      |                     HashMap
hashmap.c:56:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:31: error: expected expression before ‘)’ token
   56 |   HashMap * mapa = (HashMapa *)malloc(sizeof(HashMap));
      |                               ^
Compilation failed
b3708b4
Wed 24 Apr 2024 01:23:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2652f7b
Wed 24 Apr 2024 01:46:21 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:41: error: expected statement before ‘]’ token
   47 |       if(map->buckets[posicion] == NULL)])
      |                                         ^
hashmap.c:47:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   47 |       if(map->buckets[posicion] == NULL)])
      |       ^~
hashmap.c:47:42: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |       if(map->buckets[posicion] == NULL)])
      |                                          ^
hashmap.c:47:42: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
343dc60
Wed 24 Apr 2024 01:46:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:41: error: expected statement before ‘)’ token
   47 |       if(map->buckets[posicion] == NULL))
      |                                         ^
Compilation failed
de655b1
Wed 24 Apr 2024 01:46:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe7614c
Wed 24 Apr 2024 01:52:22 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 20/70
a814a30
Wed 24 Apr 2024 01:52:33 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  2|5
total_score: 20/70
42247c0
Wed 24 Apr 2024 01:59:18 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
8132d16
Wed 24 Apr 2024 01:59:46 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
8e62d18
Wed 24 Apr 2024 02:02:33 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:58:11: error: unused variable ‘mapaAux’ [-Werror=unused-variable]
   58 |   Pair ** mapaAux = map->buckets;
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e985d98
Wed 24 Apr 2024 02:02:47 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c22d14e
Wed 24 Apr 2024 02:07:51 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:58:10: error: unused variable ‘mapaAux’ [-Werror=unused-variable]
   58 |   Pair **mapaAux = map->buckets;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
27ce3d2
Wed 24 Apr 2024 02:08:08 PM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
3eca68f
Wed 24 Apr 2024 02:12:14 PM UTC: 
 hashmap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  2|5
total_score: 20/70
b968141
Wed 24 Apr 2024 02:15:44 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
2d8cd09
Wed 24 Apr 2024 02:16:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:75:26: error: ‘*(map->buckets + (sizetype)((long unsigned int)i * 8))’ is a pointer; did you mean to use ‘->’?
   75 |       if (map->buckets[i].key == key)
      |                          ^
      |                          ->
Compilation failed
f1d1d8c
Wed 24 Apr 2024 02:17:29 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
cef105a
Wed 24 Apr 2024 02:17:44 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
b2c334e
Wed 24 Apr 2024 02:20:13 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:76:19: error: comparison between pointer and integer [-Werror]
   76 |       if(posicion == NULL)
      |                   ^~
cc1: all warnings being treated as errors
Compilation failed
2f12580
Wed 24 Apr 2024 02:20:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a134459
Wed 24 Apr 2024 02:24:17 PM UTC: 
 hashmap.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  3|5
total_score: 20/70
3e98d81
Wed 24 Apr 2024 02:26:38 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|5
total_score: 20/70
59eb01c
Wed 24 Apr 2024 02:30:25 PM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 10/70
bc21162
Wed 24 Apr 2024 02:31:01 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 10/70
9007558
Wed 24 Apr 2024 02:33:05 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
71c20a6
Wed 24 Apr 2024 02:34:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ee7c080
Wed 24 Apr 2024 02:42:44 PM UTC: 
 hashmap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  3|5
total_score: 20/70
26d5f6b
Wed 24 Apr 2024 02:44:26 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
6f0b84e
Wed 24 Apr 2024 02:47:00 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:51:3: error: expected identifier or ‘(’ before ‘else’
   51 |   else
      |   ^~~~
hashmap.c:63:1: error: expected identifier or ‘(’ before ‘}’ token
   63 | }
      | ^
Compilation failed
fe52a66
Wed 24 Apr 2024 02:47:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/70
2a3b217
Wed 24 Apr 2024 02:47:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/70
d4af8bc
Wed 24 Apr 2024 02:48:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 10/70
e604e12
Wed 24 Apr 2024 02:53:54 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 10/70
d5ab615
Wed 24 Apr 2024 05:53:07 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 10/70
069ada0
Wed 24 Apr 2024 05:54:25 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 10/70
f23ae3f
